--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
     justify-content: center;
 }
 
+p {
+    display: block;
+}
 
 body::before {
     background-image: url("img/code.png");
